--- a/templates/ocr_upload.html
+++ b/templates/ocr_upload.html
@@ -48,13 +48,23 @@
                         {{imgname}}
                     {% endif %}
             </td>
-            <td style="width : 50%">
-                <pre>
-                    {{resulttext}}
-                </pre>
-            </td>
         </tr>
     </table>
+</div>
+<div style="width : 50%; height : 200px;">
+    <pre style="width : 100%; height : 100%;">
+        {{resulttext}}
+    </pre>
+</div>
+<div style="width : 50%; height : 200px;">
+    <pre style="width : 100%; height : 100%;">
+        {{wordlist}}
+    </pre>
+</div>
+<div>
+    <pre>
+        {{ textlist }}
+    </pre>
 </div>
 
 </body>
