data Extraction claer but update need

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,5 +10,8 @@
     {{menutitle}}
     <a href="ocr_upload">UPLOAD</a>
 </h1>
+<button onclick="location.href='/ocr_list'">
+list
+</button>
 </body>
 </html>
