--- a/templates/ocr_upload.html
+++ b/templates/ocr_upload.html
@@ -37,6 +37,7 @@
         <input type="submit" value="READ"/>
     </div>
 </form>
+<input type="button" onclick="location.href='/RequestFnc.html'" value="정보보내기">
 
 <div>
     <table style="width : 100%">
@@ -63,7 +64,7 @@
 </div>
 <div>
     <pre>
-        {{ textlist }}
+        {{ Medicine_code }}
     </pre>
 </div>
 
