--- a/templates/RequestFnc.html
+++ b/templates/RequestFnc.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-
+<div>
+    {{wordlist}}
+</div>
+<div>
+    {{Medicine_code}}
+</div>
 </body>
 </html>
