Image Smoothing Test

--- a/templates/RequestFnc.html
+++ b/templates/RequestFnc.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<div>
+<div id="wordlist">
     {{wordlist}}
 </div>
-<div>
+<div id="Medicine_code">
     {{Medicine_code}}
 </div>
 </body>
