--- a/templates/ocr_upload.html
+++ b/templates/ocr_upload.html
@@ -56,6 +56,11 @@
     </pre>
 </div>
 <div style="width : 50%; height : 200px;">
+    <pre style="width : 100%; height : 100%;">
+        {{histtext}}
+    </pre>
+</div>
+<div style="width : 50%; height : 200px;">
     <pre style="width : 100%; height : 100%;" id="wordlist">
         {{wordlist}}
     </pre>
@@ -73,12 +78,12 @@
 </div>
 <script>
     function requestTest(){
-
-        var wordlist = document.getElementById(wordlist)
-        var Medicine_code = document.getElementById(Medicine_code)
-
-        location.href='/RequestFnc.html'
+        var wordlist = document.getElementById('wordlist')
+        var Medicine_code = document.getElementById('Medicine_code')
+        var Medicine_code = document.getElementById('Medicine_code')
+        location.href='/RequestFnc'
     }
+
 </script>
 </body>
 </html>
